objects/Elisa__c.object
<CustomObject>
    <fields>
        <fullName>Number_test__c</fullName>
        <label>Number test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Field1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Field1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_Test__c</fullName>
        <label>Text Test</label>
        <type>TextArea</type>
    </fields>
    <label>Elisa</label>
    <nameField>
        <label>Elisa Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Elisa</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>